# agentic-engineering

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT.md  README.md  mkdocs.yml  requirements.txt
.claude/agents/: chapter-writer.md  coder-tester.md  coverage-researcher.md  fact-checker.md  prose-critic.md
.claude/commands/: new-chapter.md
.githooks/: pre-push
.github/workflows/: deploy.yml  test.yml
docs/: CNAME  contributing.md  index.md
docs/about/: how-to-read.md  how-we-label.md  litmus-test.md
docs/catalogs/: anti-patterns.md  decision-frameworks.md  glossary.md  hardening-checklist.md  quick-reference.md  security-posture.md  state-of-play.md
docs/composition/: fan-out.md  (+5 more)
listing-studio/: README.md  pyproject.toml
listing-studio/augmented_llm/: augmented_llm_example.py  augmented_llm_langgraph.py  augmented_llm_responses.py  floor_price.py  state.py
listing-studio/helpdesk_mcp/: __init__.py  client.py  docs_server.py  guard.py  helpdesk_mcp_example.py  helpdesk_mcp_langgraph.py  helpdesk_mcp_responses.py
listing-studio/pricing/: agent.py  model_client.py  models.py  multi_tool_example.py  multi_tool_responses.py  tool_use_example.py  tool_use_langgraph.py  tool_use_responses.py  tools.py
listing-studio/skills/: __init__.py  loader.py  skills_example.py  skills_langgraph.py  skills_responses.py
listing-studio/skills/map_compliance/: SKILL.md  __init__.py  check_map.py
listing-studio/structured_output/: schema.py  structured_output_example.py  structured_output_langgraph.py  structured_output_responses.py  validate.py
listing-studio/tests/: test_augmented_llm.py  test_doc_sync.py  test_helpdesk_mcp.py  test_pricing.py  test_skills.py  test_structured_output.py
meta/: carrier-bible.md  chapter-template.md  design-system.md  prose_lint.py  voice-and-style.md  voice-samples.md
(+53 files in other folders)
